Committing minor sidebar spacing change and red 'mavrick' span style

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <section class="showcase">
         <header>
-            <h2 class="logo"><img src='images/mavrick_cinematics_icon.png'>MAVRICK Cinematics </h2>
+            <h2 class="logo"><img src='images/mavrick_cinematics_icon.png'><span id='red-mavrick'>MAVRICK</span>      Cinematics</h2>
+            
             <div class="toggle">
-
             </div>
         </header>
         <video src="video/Mavrick_Cinematics_Drone_shot_compressed.mp4" muted loop autoplay></video> 
@@ -19,8 +19,8 @@
         <div class="overlay"></div>
 
         <div class="text">
-            <h2>Short Stories</h2>
-            <h3>Told through a lense</h3>
+            <h2>Your Stories</h2>
+            <h3>Told Cinematically</h3>
 
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione, voluptas at facilis dignissimos rem dolores!</p>
             <a href='#'>Explore</a>
