committing contact html and css files

--- a/index.html
+++ b/index.html
@@ -25,12 +25,14 @@
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione, voluptas at facilis dignissimos rem dolores!</p>
             <a href='#'>Explore</a>
         </div>
+        
 
      <ul class="social">
             <li><a href="https://www.facebook.com/MavrickCinematics"><img src="images/facebook_icon_small.png" alt="Facebook"></a></li>
             <li><a href="https://www.instagram.com/mavrickcinematics/"><img src="images/instagram_small.png" alt="Instagram"></a></li>
             <li><a href='#'><img src="images/twitter_icon_small.png" alt="Twitter"></a></li>
         </ul> 
+
     </section>
 
     <div class="menu">
@@ -38,10 +40,12 @@
             <li><a href='#'>Home</a></li>
             <li><a href='#'>Portfolio</a></li>
             <li><a href='#'>Pricing</a></li>
-            <li><a href='#'>Contact</a></li>
+            <li><a href='contact.html'>Contact</a></li>
         </ul>
     </div>
 
+
     <script src='main.js'></script>
+    
 </body>
 </html>
